src/objects/SAE_Referral_Entry_Reason__mdt.object
<CustomObject>
    <description>Stores values for reason for referral creation picklist</description>
    <fields>
        <fullName>End_Date_Note__c</fullName>
        <description>Note on end date</description>
        <label>End Date Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Number of days after start date to set end date</description>
        <label>End Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Option__c</fullName>
        <description>Determines dropdown values</description>
        <inlineHelpText>Use &quot;Does the provider need assistance navigating Referral Link?&quot; value for non AP source code and &quot;Is this an Exchange plan?&quot; for AP source code</inlineHelpText>
        <label>Field Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <description>Stores value for note to be displayed based on reason for referral entry</description>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picklist_UI_Value__c</fullName>
        <description>Stores values for reason for referral entry picklist</description>
        <label>Picklist UI Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Code__c</fullName>
        <description>Stores source code of member referral is being created for</description>
        <label>Source Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visits_Note__c</fullName>
        <description>Note for visit</description>
        <label>Visits Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visits__c</fullName>
        <description>Number of visits allowed</description>
        <label>Visits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SAE Referral Entry Reason</label>
    <listViews>
        <fullName>SAE</fullName>
        <columns>MasterLabel</columns>
        <columns>Source_Code__c</columns>
        <columns>Field_Option__c</columns>
        <columns>Picklist_UI_Value__c</columns>
        <columns>Note__c</columns>
        <columns>Visits__c</columns>
        <columns>Visits_Note__c</columns>
        <columns>End_Date__c</columns>
        <columns>End_Date_Note__c</columns>
        <filterScope>Everything</filterScope>
        <label>SAE</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>SAE Referral Entry Reasons</pluralLabel>
</CustomObject>